Disables canvas animation when not visible, fixes #4. Adds a retry option after 30s to check if there's anything to sync. Adds proper dev env vars. Updates packaged files.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100%;
     overflow: hidden;
+    cursor: default;
 }
 
 .transparent {
@@ -66,7 +67,11 @@ html, body {
     padding-top: 200px;
 }
 
-#OCRStatus {
+#OCRSyncButton {
+    margin: 0;
+}
+
+#OCRStatusWrapper {
     margin-top: 40px;
 }
 
